--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,10 +7,13 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "Jwt": {
-      "key": "GgYY"
     }
+  },
+  "JWT": {
+    "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
   },
   "AllowedHosts": "*"
 }
